Bug 110351 - [CI][SHARDS] igt@gem_exec_parallel@*-fds - skip - Test requirement: igt_allow_unlimited_files(), Last errno: 1, Operation not permitted, SKIP
Summary: [CI][SHARDS] igt@gem_exec_parallel@*-fds - skip - Test requirement: igt_allow...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev, Triaged
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-08 09:37 UTC by Martin Peres
Modified: 2019-04-17 14:11 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: GEM/Other


Attachments

Description Martin Peres 2019-04-08 09:37:48 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb1/igt@gem_exec_parallel@vebox-fds.html

Starting subtest: vebox-fds
System limit for open files is 1616182
Test requirement not met in function all, file ../tests/i915/gem_exec_parallel.c:169:
Test requirement: igt_allow_unlimited_files()
Last errno: 1, Operation not permitted
Subtest vebox-fds: SKIP (0.000s)
Comment 1 CI Bug Log 2019-04-08 09:38:18 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* ICL: igt@gem_exec_parallel@*-fds - skip - Test requirement: igt_allow_unlimited_files(), Last errno: 1, Operation not permitted, SKIP
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb1/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb2/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb4/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb4/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb6/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4932/shard-iclb6/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb1/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb1/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb2/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb2/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb2/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5882/shard-iclb5/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb2/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb3/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb3/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb4/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb4/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12711/shard-iclb5/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb1/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb1/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb4/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb5/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb5/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12712/shard-iclb6/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb2/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb3/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb4/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb4/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb5/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_4072/shard-iclb6/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb1/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb1/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb5/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb5/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb8/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12713/shard-iclb8/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb1/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb1/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb1/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb1/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12714/shard-iclb4/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb2/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb2/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb3/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb4/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb5/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12717/shard-iclb8/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb1/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb3/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb4/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb4/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb5/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12718/shard-iclb6/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5883/shard-iclb1/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5883/shard-iclb5/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5883/shard-iclb8/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5883/shard-iclb8/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb1/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb1/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb2/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb3/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12719/shard-iclb6/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u2/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u2/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u2/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_250/fi-icl-u3/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb2/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb3/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb6/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb6/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5884/shard-iclb8/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb1/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb4/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb4/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb4/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12720/shard-iclb5/igt@gem_exec_parallel@vebox-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12722/shard-iclb2/igt@gem_exec_parallel@render-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12722/shard-iclb2/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12722/shard-iclb3/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12722/shard-iclb3/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12722/shard-iclb3/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5885/shard-iclb1/igt@gem_exec_parallel@default-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5885/shard-iclb5/igt@gem_exec_parallel@blt-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5885/shard-iclb6/igt@gem_exec_parallel@bsd-fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5885/shard-iclb6/igt@gem_exec_parallel@fds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5885/shard-iclb6/igt@gem_exec_parallel@vebox-fds.html
Comment 2 Chris Wilson 2019-04-08 09:47:11 UTC
We need ~4096 fd, not 1+million. So we could reduce our ask somewhat...
Comment 3 Chris Wilson 2019-04-09 12:05:52 UTC
commit dc4f45eb6874331daec870dc1e4cfc3ac5c49311 (upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Apr 8 22:31:46 2019 +0100

    lib: Use nr_open not file-max for setting fd rlimit
    
    Petri pointed out that the maximum allowed number of files per process
    is nr_open, not the system cap of file-max.
    
    Suggested-by: Petri Latvala <petri.latvala@intel.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=110351
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Lucas De Marchi <lucas.demarchi@intel.com>
    Cc: Petri Latvala <petri.latvala@intel.com>
    Reviewed-by: Petri Latvala <petri.latvala@intel.com>

* fingers crossed
Comment 4 Martin Peres 2019-04-17 14:11:15 UTC
(In reply to Chris Wilson from comment #3)
> commit dc4f45eb6874331daec870dc1e4cfc3ac5c49311 (upstream/master)
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Mon Apr 8 22:31:46 2019 +0100
> 
>     lib: Use nr_open not file-max for setting fd rlimit
>     
>     Petri pointed out that the maximum allowed number of files per process
>     is nr_open, not the system cap of file-max.
>     
>     Suggested-by: Petri Latvala <petri.latvala@intel.com>
>     Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=110351
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
>     Cc: Lucas De Marchi <lucas.demarchi@intel.com>
>     Cc: Petri Latvala <petri.latvala@intel.com>
>     Reviewed-by: Petri Latvala <petri.latvala@intel.com>
> 
> * fingers crossed

Looks good! Thanks!
Comment 5 CI Bug Log 2019-04-17 14:11:26 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.